refactoring-1  (#6)
* refactor(properties) : rename / separate properties, property test, 

- Add OAuthProperties to obtain Oauth properties set
- Add UriUtils to build relevant uri.
- Modify to use base api url according to .env
- Add cors config to use different allowed origins upon properties